# hatespeech-detect

./: .gitignore  main.py  pyproject.toml
modules/: ollama_cfg.py
utils/: logging_cfg.py  mappings_loader.py
utils/mappings/: ollama_models.json
utils/prompts/: hate.txt  system.txt
